updating csp for github

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; default-src 'self' https://microetl.github.io">
+  <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; img-src 'self' data:; style-src ‘self’ ‘unsafe-inline’; default-src 'self' https://microetl.github.io;">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>MicroETL - Big Data comes in small packages.</title>
