--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <div class="card col-lg-8 col-md-10 col-sm-12 mx-auto">
           <div class="card-body">
             <div class="contact-block">
-              <form id="contactForm">
+              <form id="contactForm" action="https://formspree.io/mgewvwab" method="POST">
                 <div class="row">
                   <div class="col-md-12">
                     <div class="form-group">
